# path_framework

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT_DEVELOPMENT_ROADMAP.md  LICENSE  Makefile  PRE_PHASE_COMPLETION.md  README.md  RELEASE_NOTES.md  UV_SETUP_GUIDE.md  VERSION.yaml  amazonq_mimic.py  coverage.xml  demo_llm_standalone.py  demo_phase1_output.py  demo_proper_projects.py  demo_real_llm.py  dependency-report.txt  direct_llm_architecture.py  docker-compose.yml  generate_path_artifacts.py  path_generate.py  pyproject.toml  pyrightconfig.json  quick_llm_arch.py  s3_example.py  setup.cfg  test_gemma_llm.py  uv.toml
.amazonq/rules/: conversation.rule.md  general.md  mermaid-diagrams.rule.md  mermaid_colors.md  path-framework-colors.rule.md  rule-execution-priority-matrix.rule.md  session-management.rule.md  token-economy.rule.md  user-stories.rule.md
.github/workflows/: ci-cd.yml
agents/: README.md
agents/shared/: base_agent.py
archive/pathbridge/: __init__.py  exceptions.py  utils.py
archive/root_files/: README.md  amazon_q_example.py  bedrock_amazonq.py
config/: user_stories.yaml
docker/: Dockerfile  Dockerfile.phase  Dockerfile.single  docker-compose.phase-containers.yml
docs/: PATH_FLOW_PATTERNS.md  UV_USAGE.md  development_status.md  llm_integration_guide.md
docs/archive/: AGENT_IMPLEMENTATION_PLAN.md  GETTING_STARTED.md  PATH_FRAMEWORK_V2_TRANSFORMATION_COMPLETE.md  README.md  path_framework_complete_integration.md  path_framework_overview_v1_backup.md
docs/framework/: AGENTIC_CODING_RESEARCH_PAPER_v2.1.1.md  AGENTIC_CODING_RESEARCH_PAPER_v2.1.md  AGENTIC_CODING_RESEARCH_PAPER_v2.3.0.md  AGENT_DATA_EXCHANGE_PROTOCOLS_v1.0.0.md  AI_CODING_AGENT_SPECIFICATIONS_v1.0.0.md  (+11 more)
examples/: README.md  agent_interface_example.py  artifact_generation_examples.sh  base_agent_usage_example.py  configuration_demo.py  openrouter_example.py  phase_models_demo.py  sample_data.py  simple_usage_guide.py
framework/: path_devops_methodology.md  path_framework_complete_integration.md  path_framework_overview.md  path_operations_methodology.md  path_software_engineering_methodology.md  path_tdd_methodology.md
framework_tests/: __init__.py  conftest.py  test_agents.py  test_framework.py
path_framework/: __init__.py  agents_base.py  cli.py  config.py  exceptions.py  utils.py
pathbridge/: README.md  cli.py  core_agent_usage.py  pyproject.toml
pathbridge/artifacts/: README.md
pathbridge/config/: README.md
pathbridge/core/: __init__.py
pathbridge/core/models/: __init__.py
pathbridge/docs/: DOCUMENTATION_NAMING_CONVENTION.md  README.md
pathbridge/docs/architecture/: README.md  pathbridge_architecture_diagram.md  pathbridge_capability_standards.md  pathbridge_interaction_mechanisms.md
pathbridge/docs/core/: COREAGENT_IMPLEMENTATION_TASKS.md  COREAGENT_USAGE.md  README.md  coreagent_architecture.md  coreagent_usage.md
pathbridge/docs/guides/: README.md  pathbridge_ai_coding_assistant.md  pathbridge_file_operations_guide.md  pathbridge_human_validation_guide.md  pathbridge_implementation_guide.md  pathbridge_llm_integration_guide.md  pathbridge_rag_integration_guide.md  pathbridge_security_integration_guide.md  pathbridge_testing_integration_guide.md
pathbridge/docs/planning/: AGENT_DEVELOPMENT_ROADMAP.md  AGENT_IMPLEMENTATION_PLAN.md  README.md  pathbridge_development_roadmap.md  pathbridge_implementation_plan.md  pathbridge_mvp_master_tasks.md
pathbridge/docs/protocols/: README.md  pathbridge_api_specification_v1.0.0.md  pathbridge_data_exchange_protocols_v1.0.0.md
pathbridge/docs/specifications/: AGENT_SPECIFICATION_CODES_v1.0.0.md  AI_CODING_AGENT_SPECIFICATIONS_v1.0.0.md  README.md
pathbridge/docs/standards/: README.md  pathbridge_compliance_standards.md  pathbridge_documentation_standards.md
pathbridge/phases/arch/: generate_artifacts.py
pathbridge/phases/arch/ai/: component_designer.py
pathbridge/phases/phase1/: integration_architect.py
pathbridge/phases/prod/: __init__.py
pathbridge/src/: README.md
pathbridge/src/agents/: __init__.py
pathbridge/src/communication/: agent_messenger.py  event_bus.py  protocols.py
pathbridge/src/core/: __init__.py  base_agent.py  extended_capabilities.py  extended_capability_implementations.py  system_adapter.py
pathbridge/src/orchestration/: agent_orchestrator.py
pathbridge/src/pathbridge/: __init__.py
pathbridge/src/profiles/: development_profile.py  profile_loader.py  test_profile.py
pathbridge/src/profiles/phase1/: __init__.py
pathbridge/src/profiles/phase1/component_designer_repo/: component_designer_design.md
pathbridge/src/profiles/phase1/integration_architect_repo/: integration_architect_design.md
pathbridge/src/profiles/phase2/: coverage_validator.py  implementation_specialist.py  test_strategist.py
pathbridge/src/profiles/phase2/implementation_specialist_repo/: implementation_specialist_design.md
pathbridge/src/profiles/phase2/tdd_orchestrator_repo/: tdd_orchestrator_design.md
pathbridge/src/profiles/phase2/test_strategist_repo/: test_strategist_design.md
pathbridge/src/profiles/phase3/infrastructure_engineer_repo/: infrastructure_engineer_design.md
pathbridge/src/profiles/phase3/pipeline_architect_repo/: pipeline_architect_design.md
pathbridge/src/profiles/phase4/: performance_analyst.py
pathbridge/src/profiles/phase4/operations_specialist_repo/: operations_specialist_design.md
pathbridge/src/profiles/phase4/reliability_engineer_repo/: reliability_engineer_design.md
pathbridge/src/utils/: test_data_provider.py
pathbridge/tests/: test_base_agent_comprehensive.py  test_base_agent_tdd.py
scripts/: setup_config.sh  setup_openrouter.sh  setup_phase_models.sh
src/: __init__.py  main.py  main_individual.py
templates/: README.md  implementation_checklist.md  project_assessment_template.md  quick_start_example.md  requirements_template.yaml  system_architecture_template.yaml
tests/: conftest.py  test_agents.py  test_capability_interface_compliance.py  test_core_agent_enhanced.py  test_domain_analyst.py  test_utc_time_tracking.py
(+151 files in other folders)
