[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "path-framework"
version = "2.0.0"
description = "PATH Framework - Process/AI/Technology/Human for systematic software engineering"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Precocity Research Lab", email = "contact@precocityresearch.com"}
]
maintainers = [
    {name = "PATH Framework Team", email = "path@precocityresearch.com"}
]
keywords = ["ai", "agents", "software-engineering", "tdd", "devops", "operations", "human-ai-collaboration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "asyncio-mqtt>=0.16.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "uvloop>=0.19.0",
    "pyyaml>=6.0.2",
    "openai>=1.98.0",
    "anthropic>=0.60.0",
]

# Optional dependencies for different use cases
[project.optional-dependencies]
# LLM providers
llm = [
    "openai>=1.35.0",
    "anthropic>=0.28.0",
    "ollama>=0.2.0",
]

# Development tools integration
dev-tools = [
    "gitpython>=3.1.0",
    "docker>=7.1.0",
    "kubernetes>=29.0.0",
    "boto3>=1.34.0",  # AWS
    "azure-identity>=1.16.0",  # Azure
    "google-cloud-core>=2.4.0",  # GCP
]

# Testing frameworks
testing = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "coverage>=7.5.0",
    "factory-boy>=3.3.0",
]

# Monitoring and observability
monitoring = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "grafana-api>=1.0.3",
]

# Security and compliance
security = [
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    "bandit>=1.7.0",
    "safety>=3.2.0",
]

# Data processing and analysis
data = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

# Web frameworks for UI/API
web = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "websockets>=12.0.0",
]

# Database integrations
database = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",  # PostgreSQL
    "redis>=5.0.0",
    "motor>=3.4.0",  # MongoDB async
]

# All optional dependencies
all = [
    "path-framework[llm,dev-tools,testing,monitoring,security,data,web,database]"
]

# Development dependencies
dev = [
    "path-framework[all]",
    "ruff>=0.1.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "sphinx>=7.3.0",
    "sphinx-rtd-theme>=2.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/precocityresearchlab/path_framework"
Documentation = "https://path-framework.readthedocs.io/"
Repository = "https://github.com/precocityresearchlab/path_framework.git"
Issues = "https://github.com/precocityresearchlab/path_framework/issues"
Changelog = "https://github.com/precocityresearchlab/path_framework/blob/main/RELEASE_NOTES.md"

[project.scripts]
path = "path_framework.cli:main"
path-agent = "path_framework.agents.cli:agent_main"
path-orchestrator = "path_framework.orchestrator.cli:orchestrator_main"
path-generate = "path_framework.phases.arch.generate_artifacts:main"

[tool.hatch.build.targets.wheel]
packages = ["path_framework"]

[tool.hatch.build.targets.sdist]
include = [
    "/path_framework",
    "/framework",
    "/templates",
    "/agents",
    "/examples",
    "/docs",
    "/tests",
]

# Ruff configuration - Replaces Black, isort, flake8, and more
[tool.ruff]
# Ruff settings
line-length = 88
target-version = "py310"

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".tox",
    ".eggs",
    "*.egg-info",
    "projects/",  # Exclude generated projects
]

# Linting configuration
[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert detected (OK in tests)
    "T201",   # print found (OK in demos and scripts)
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "B904",   # raise without from (too many to fix)
    "F403",   # star imports (acceptable in __init__.py)
    "F405",   # may be undefined from star imports
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"**/migrations/*" = ["E501", "F401"]
"**/tests/*" = ["B008", "S101", "F401"]
"demo_*.py" = ["E501", "F401", "B008", "F841", "T201"]
"examples/*" = ["E501", "F401", "B008", "F841", "T201"]
"test_*.py" = ["S101"]

# Import sorting settings (replaces isort)
[tool.ruff.lint.isort]
known-first-party = ["path_framework"]
force-single-line = false
force-sort-within-sections = false
single-line-exclusions = ["os", "sys"]

# Pyright configuration for VS Code Pylance - Minimal checking
[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUntypedNamedTuple = false
reportPrivateUsage = false
reportConstantRedefinition = false
reportIncompatibleMethodOverride = false
reportMissingParameterType = false
reportMissingReturnType = false
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportUndefinedVariable = "error"
reportUnboundVariable = "error"

# MyPy type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "kubernetes.*",
    "boto3.*",
    "azure.*",
    "google.*",
    "prometheus_client.*",
    "grafana_api.*",
    "ollama.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=path_framework",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "requires_llm: Tests that require LLM API access",
    "requires_docker: Tests that require Docker",
    "requires_k8s: Tests that require Kubernetes",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["path_framework"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit security linting (still used alongside Ruff for security)
[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.10.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

# UV-specific configuration
[tool.uv]
# UV development dependencies
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.1.0",
    "mypy>=1.10.0",
]

# UV workspace configuration for phase-specific model support
[tool.uv.sources]
# Local development mode
path-framework = { workspace = true }

# UV environment configuration
[tool.uv.pip]
# Use faster resolution
resolution-mode = "highest"
# Enable pre-release versions if needed
prerelease = "disallow"

# UV scripts for common tasks
[tool.uv.scripts]
# PATH artifact generation
generate-artifacts = "uv run python path_generate.py"
path-arch = "uv run python -m path_framework.phases.arch.generate_artifacts"

# LLM-related scripts
test-llm = "uv run python -m pytest tests/ -m requires_llm"
demo-openrouter = "uv run python examples/openrouter_example.py"
demo-phase-models = "uv run python examples/phase_models_demo.py"
demo-config = "uv run python examples/configuration_demo.py"

# Setup scripts
setup-openrouter = "./scripts/setup_openrouter.sh"
setup-phase-models = "./scripts/setup_phase_models.sh"

# Development scripts
format = "uv run ruff format path_framework/ examples/ tests/"
lint = "uv run ruff check path_framework/ examples/ tests/"
lint-fix = "uv run ruff check --fix path_framework/ examples/ tests/"
typecheck = "uv run mypy path_framework/"
test = "uv run pytest"
test-cov = "uv run pytest --cov=path_framework --cov-report=html"

# Install LLM providers
install-openai = "uv add openai"
install-anthropic = "uv add anthropic"
install-ollama = "uv add aiohttp"
install-all-llm = "uv add openai anthropic aiohttp"
