[project]
name = "pathbridge"
version = "1.0.0"
description = "PathBridge - Universal bridge for PATH Framework integration with AI capabilities"
readme = "README.md"
authors = [
    { name = "PATH Framework Team", email = "precocity.research@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0"
]

[project.scripts]
pathbridge = "pathbridge:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
